@@ -1,3 +1,7 @@
+Wed Sep 13 17:34:03 BST 2000 Olly Betts
+
+	* test programs can now take a list of tests to on the command line.
+
 Wed Sep 13 15:34:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* OmBatchEnquire::query_desc now initialised its elements to values
